--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -1,13 +1,12 @@
-name: Proxy
+name: Postgres
 
 on:
-  workflow_dispatch: {}
   push:
     branches:
       - "main"
     paths:
-      - ".github/workflows/proxy.yml"
-      - "proxy/**"
+      - ".github/workflows/postgres.yml"
+      - "docker/dockerfile.postgres"
 
 jobs:
   build-images:
@@ -16,19 +15,13 @@ jobs:
       matrix:
         include:
           - context: .
-            file: docker/dockerfile.proxy
-            endpoint: demeter-run/ext-cardano-scrolls-proxy
+            file: docker/dockerfile.operator
+            endpoint: demeter-run/ext-cardano-scrolls-postgres-operator
 
     continue-on-error: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-    
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -42,6 +35,6 @@ jobs:
         with:
           context: ${{ matrix.context }}
           file: ${{ matrix.file }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ matrix.endpoint }},ghcr.io/${{ matrix.endpoint }}:${{ github.sha }}
