--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -23,12 +23,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-    
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -41,6 +35,6 @@ jobs:
         with:
           context: ${{ matrix.context }}
           file: ${{ matrix.file }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ matrix.endpoint }},ghcr.io/${{ matrix.endpoint }}:${{ github.sha }}
