--- a/docker/dockerfile.postgres
+++ b/docker/dockerfile.postgres
@@ -18,7 +18,9 @@ RUN apt update && apt -y install \
     xsltproc \
     ccache \
     pkg-config \
-    sudo
+    sudo \
+    postgresql-server-dev-14 \
+    postgresql-server-dev-15
 
 # Add postgres to the sudoers with no password prompt for specific commands
 RUN echo "postgres ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/postgres
@@ -26,7 +28,9 @@ RUN echo "postgres ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/postgres
 # Using su instead of USER since dev container doesn't seem to like USER docker directive
 RUN chown postgres:root /home/postgres/.bashrc
 RUN su - postgres -c 'curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y'
-RUN su - postgres -c 'cargo install --version 0.11.3 --locked cargo-pgrx && cargo pgrx init'
+RUN su - postgres -c 'cargo install --version 0.11.3 --locked cargo-pgrx'
+RUN su - postgres -c 'cargo pgrx init --pg14 /usr/lib/postgresql/14/bin/pg_config'
+RUN su - postgres -c 'cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config'
 
 RUN chown -R postgres:root /usr/share/postgresql
 RUN chown -R postgres:root /usr/lib/postgresql
